--- a/dlls/quartz/tests/Makefile.in
+++ b/dlls/quartz/tests/Makefile.in
@@ -1,5 +1,5 @@
 TESTDLL   = quartz.dll
-IMPORTS   = oleaut32 ole32 advapi32 user32
+IMPORTS   = oleaut32 ole32 advapi32 user32 strmbase
 
 C_SRCS = \
 	avisplitter.c \
