dsdmo: Add stub IMediaObject for standard effects.
Since all standard effects operate about the same, we can use the same COM object for each.

--- a/dlls/dsdmo/Makefile.in
+++ b/dlls/dsdmo/Makefile.in
@@ -1,4 +1,9 @@
 MODULE    = dsdmo.dll
+IMPORTS   = dmoguids uuid
 
 C_SRCS = \
-	dsdmo_main.c
+	dsdmo_main.c \
+	effects.c
+
+IDL_SRCS = \
+	dsdmo_classes.idl
